@@ -1,4 +1,4 @@
-/* $Id: sec.c,v 1.21 2004/07/11 13:33:40 ekohl Exp $
+/* $Id: sec.c,v 1.22 2004/08/15 17:03:15 chorns Exp $
  *
  * COPYRIGHT:       See COPYING in the top level directory
  * PROJECT:         ReactOS system libraries
@@ -11,10 +11,7 @@
  *                  Created 01/11/98
  */
 
-#define NTOS_MODE_USER
-#include <windows.h>
-#include <ntos.h>
-
+#include "advapi32.h"
 #include <debug.h>
 
 /*
